--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kastro Kiran V - Official Website</title>
+    <title>Maulik Devani - Official Website</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <style>
         body {
@@ -49,28 +49,28 @@
         }
         .bold {
             font-weight: bold;
-            color: #1E90FF; /* Different color for Machine Learning */
+            color: #1E90FF; /* Different color for key skills */
         }
     </style>
 </head>
 <body>
     <div class="header">
         <p>Welcome to the Official Website of</p>
-        <p><b style="color: #4CAF50;">Kastro Kiran V</b></p>
+        <p><b style="color: #4CAF50;">Maulik Devani</b></p>
         <div class="line"></div>
     </div>
     <div class="content">
-        <p>I'm currently pursuing PhD, where my research is focused on the applications of <span class="bold">Machine Learning</span> in Concrete Materials.</p>
-        <p>Besides my academic pursuits, I provide bespoke corporate trainings in <b>AWS</b> and <b>DevOps</b>, empowering individuals to thrive in the Cloud domain.</p>
+        <p>I specialize in <span class="bold">DevOps Engineering</span> with strong expertise in <span class="bold">Cloud Platforms (AWS)</span>, <span class="bold">Containerization</span>, <span class="bold">CI/CD Pipelines</span>, and <span class="bold">Infrastructure as Code (IaC)</span>.</p>
+        <p>My goal is to streamline processes, enhance efficiency, and empower teams with automation and cutting-edge technologies.</p>
         <br><br>
-        <p>Explore my Free AWS Course on YouTube:</p>
-        <a href="https://youtube.com/playlist?list=PLs-PsDpuAuTdOcZa-DDgG8KRbtMI_XRrC&si=y9S-QKDJwF7FhoWp" target="_blank" class="button">Watch Now</a>
+        <p>Explore my Portfolio:</p>
+        <a href="https://www.maulikdevani.com" target="_blank" class="button">Visit Portfolio</a>
         <br><br>
         <p>Connect with me on LinkedIn:</p>
-        <a href="https://www.linkedin.com/in/kastro-kiran/" target="_blank" class="button">Connect</a>
+        <a href="https://www.linkedin.com/in/iamdevani/" target="_blank" class="button">Connect</a>
     </div>
     <div class="footer">
-        &copy; Kastro Kiran V | All rights reserved
+        &copy; Maulik Devani | All rights reserved
     </div>
 </body>
 </html>
