--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="header">
         <p>Welcome to the Official Website of</p>
         <p><b style="color: #4CAF50;">Maulik Devani</b></p>
-        <p style="color: #333; font-size: 18px;">(This is from CodePipeline)</p> <!-- Added this line -->
+        <p style="color: #333; font-size: 18px;">(This is from Jenkins pipeline)</p> <!-- Added this line -->
         <div class="line"></div>
     </div>
     <div class="content">
