--- a/index.html
+++ b/index.html
@@ -3,75 +3,145 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maulik Devani - Official Website</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Maulik Devani - DevOps Engineer</title>
+    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            text-align: center;
-            background-color: #f7f7f7;
+            box-sizing: border-box;
         }
-        .header {
-            margin-top: 50px;
-            font-size: 32px;
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f3f4f6;
             color: #333;
-            text-transform: uppercase;
+            line-height: 1.6;
+        }
+        header {
+            background-color: #3498db;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        header h1 {
+            font-size: 3em;
+            margin-bottom: 10px;
             letter-spacing: 2px;
         }
-        .content {
-            margin-top: 50px;
-            font-size: 20px;
-            color: #666;
+        header p {
+            font-size: 1.2em;
         }
-        .line {
-            border-top: 3px solid #4CAF50;
-            margin: 30px auto;
+
+        .container {
             width: 80%;
+            margin: 0 auto;
+            text-align: center;
+            padding: 40px 0;
         }
-        .footer {
-            margin-top: 50px;
-            font-size: 14px;
-            color: #999;
+
+        .hero {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
-        .button {
+        .hero img {
+            width: 180px;
+            height: 180px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 6px solid #fff;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+        }
+        .hero h2 {
+            margin-top: 20px;
+            font-size: 2em;
+            font-weight: 700;
+        }
+        .hero p {
+            color: #777;
+            font-size: 1.1em;
+            margin: 15px 0;
+        }
+
+        .skills {
+            background-color: #fff;
+            padding: 40px 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+            margin-bottom: 40px;
+        }
+        .skills h3 {
+            margin-bottom: 30px;
+            font-size: 1.8em;
+            color: #333;
+        }
+        .skills ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .skills li {
             display: inline-block;
-            background-color: #4CAF50;
+            background-color: #3498db;
             color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
+            padding: 12px 18px;
+            margin: 8px;
+            border-radius: 20px;
+            font-size: 1em;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: background 0.3s ease;
         }
-        .button:hover {
-            background-color: #45a049;
+        .skills li:hover {
+            background-color: #2980b9;
         }
-        .bold {
-            font-weight: bold;
-            color: #1E90FF; /* Different color for key skills */
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+        footer p {
+            margin: 0;
+            font-size: 0.9em;
         }
     </style>
 </head>
 <body>
-    <div class="header">
-        <p>Welcome to the Official Website of</p>
-        <p><b style="color: #4CAF50;">Maulik Devani</b></p>
-        <p style="color: #333; font-size: 18px;">(This is from Jenkins pipeline " WEBHOOK-AUTOSCALLING-LB ")</p> <!-- Added this line -->
-        <div class="line"></div>
-    </div>
-    <div class="content">
-        <p>I specialize in <span class="bold">DevOps Engineering</span> with strong expertise in <span class="bold">Cloud Platforms (AWS)</span>, <span class="bold">Containerization</span>, <span class="bold">CI/CD Pipelines</span>, and <span class="bold">Infrastructure as Code (IaC)</span>.</p>
-        <p>My goal is to streamline processes, enhance efficiency, and empower teams with automation and cutting-edge technologies.</p>
-        <br><br>
-        <p>Explore my Portfolio:</p>
-        <a href="https://www.maulikdevani.com" target="_blank" class="button">Visit Portfolio</a>
-        <br><br>
-        <p>Connect with me on LinkedIn:</p>
-        <a href="https://www.linkedin.com/in/iamdevani/" target="_blank" class="button">Connect</a>
-    </div>
-    <div class="footer">
-        &copy; Maulik Devani | All rights reserved
-    </div>
+
+<header>
+    <h1>Maulik Devani</h1>
+    <p>DevOps Engineer | Automating Infrastructure | Ensuring Scalability & Security</p>
+</header>
+
+<section class="container hero">
+    <img src="photo.png" alt="Maulik Devani">
+    <h2>Hi, I'm Maulik</h2>
+    <p>I specialize in cloud automation, CI/CD pipelines, container orchestration, and efficient infrastructure management. I’m passionate about making complex systems run smoothly with modern tools and technologies.</p>
+</section>
+
+<section class="container skills">
+    <h3>My Skills</h3>
+    <ul>
+        <li>AWS Cloud</li>
+        <li>CI/CD: Jenkins</li>
+        <li>Git & GitHub</li>
+        <li>Docker & Kubernetes</li>
+        <li>Ansible</li>
+        <li>Terraform</li>
+        <li>Python & Bash</li>
+        <li>Prometheus & Grafana</li>
+        <li>MySQL & DynamoDB</li>
+    </ul>
+</section>
+
+<footer>
+    <p>&copy; 2024 Maulik Devani - All Rights Reserved</p>
+</footer>
+
 </body>
 </html>
