--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             color: white;
             padding: 20px;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         header h1 {
-            font-size: 3em;
+            font-size: 2.5em;
             margin-bottom: 10px;
             letter-spacing: 2px;
         }
@@ -48,50 +49,48 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-        }
-        .hero img {
-            width: 180px;
-            height: 180px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 6px solid #fff;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
         .hero h2 {
             margin-top: 20px;
-            font-size: 2em;
+            font-size: 2.2em;
             font-weight: 700;
+            color: #3498db;
         }
         .hero p {
-            color: #777;
-            font-size: 1.1em;
+            color: #555;
+            font-size: 1.2em;
             margin: 15px 0;
+            max-width: 800px;
+            line-height: 1.5;
         }
 
         .skills {
             background-color: #fff;
             padding: 40px 20px;
             border-radius: 10px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             margin-bottom: 40px;
         }
         .skills h3 {
             margin-bottom: 30px;
-            font-size: 1.8em;
+            font-size: 2em;
             color: #333;
         }
         .skills ul {
             list-style-type: none;
             padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
         .skills li {
-            display: inline-block;
             background-color: #3498db;
             color: white;
-            padding: 12px 18px;
+            padding: 12px 20px;
             margin: 8px;
             border-radius: 20px;
-            font-size: 1em;
+            font-size: 1.1em;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             transition: background 0.3s ease;
         }
@@ -104,6 +103,7 @@
             color: #fff;
             text-align: center;
             padding: 20px;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
         }
         footer p {
             margin: 0;
@@ -119,7 +119,6 @@
 </header>
 
 <section class="container hero">
-    <img src="image/photo.png" alt="Maulik Devani">
     <h2>Hi, I'm Maulik</h2>
     <p>I specialize in cloud automation, CI/CD pipelines, container orchestration, and efficient infrastructure management. I’m passionate about making complex systems run smoothly with modern tools and technologies.</p>
 </section>
