--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Maulik Devani - DevOps Engineer</title>
+    <title>Sohit Mishra - DevOps Engineer</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
@@ -114,12 +114,12 @@
 <body>
 
 <header>
-    <h1>Maulik Devani</h1>
+    <h1>Sohit Mishra</h1>
     <p>DevOps Engineer | Automating Infrastructure | Ensuring Scalability & Security</p>
 </header>
 
 <section class="container hero">
-    <h2>Hi, I'm Maulik</h2>
+    <h2>Hi, I'm Sohit</h2>
     <p>I specialize in cloud automation, CI/CD pipelines, container orchestration, and efficient infrastructure management. I’m passionate about making complex systems run smoothly with modern tools and technologies.</p>
 </section>
 
@@ -139,7 +139,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 Maulik Devani - All Rights Reserved</p>
+    <p>&copy; 2024 Sohit Mishra - All Rights Reserved</p>
 </footer>
 
 </body>
